--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Bad Apple ASCII</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
     <script src="script.js" defer></script>
-    <link rel="icon" type="iconApple/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="iconApple.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container"></div>
+
 </body>
 </html>
